--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.2",
+    "react-tsparticles": "^1.18.12",
+    "react-typed": "^1.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
